k8s-manifests-simple/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tmi
  labels:
    app.kubernetes.io/part-of: take-my-interview
